# classical-ml-systems

./: .pdm-python  README.md  pyproject.toml
Notes/bayes/: chapter_0_bayes_theorem_and_inference.ipynb  chapter_1_naive_bayes.ipynb  chapter_4_bayesian_linear_regression.ipynb
Notes/decision_tree_and_ensembles/: chapter_0.ipynb  chapter_1.ipynb  chapter_2_random_forest.ipynb  chapter_3_adaboost.ipynb  chapter_4_gbm.ipynb  chapter_5_xgboost.ipynb  chapter_6_lightgbm.ipynb
Notes/math/linear_algebra/: chapter_0_vectors_and_projections.ipynb  chapter_1_matrices_and_transformations.ipynb  chapter_2_eigenvalues_and_eigenvectors.ipynb  chapter_3_svd.ipynb  chapter_4_special_matrices_and_norms.ipynb
Notes/math/optimization/: chapter_0_lagrangian_and_rayleigh_quotient.ipynb
Notes/math/probability/: chapter_0_probability_foundations.ipynb  chapter_1_probability_distributions.ipynb  chapter_2_mle_vs_map.ipynb
Notes/math/statistics/: chapter_0_variance_covariance_correlation.ipynb  chapter_1_multivariate_gaussian.ipynb
Notes/pca/: chapter_0_pca_core.ipynb  chapter_1_pca_geometry_and_applications.ipynb  chapter_2_high_dimensional_pca.ipynb  chapter_3_probabilistic_pca.ipynb  chapter_4_robust_pca.ipynb
projects/01_telco_churn/: config.yaml
projects/01_telco_churn/notebooks/: 01_eda.ipynb
projects/01_telco_churn/reports/: model_card.md
shared/utils/: data_loader.py  logger.py
